--- a/stylev.css
+++ b/stylev.css
@@ -5,19 +5,34 @@ body {
     align-items: center;
     height: 530px;
     background-color: #fff;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 #v-form1 {
     background-color: rgba(255,255,255,0.7);
-    padding-top: 127px;
-    padding-bottom: 26px;
     padding-left: 5%;
     padding-right: 5%;
-    border-radius: 5px;
+    border-radius: 20px;
+    padding-bottom: 5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    opacity: 100%;
+    margin-top: auto;
+    margin-bottom: 0%;
+}
+#v-form2 {
+    background-color: rgba(255,255,255,0.7);
+    padding-top: 15px;
+    padding-bottom: 35px;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     opacity: 100%;
 }
-#v-1 {
+.h2-1 {
     text-align: center;
 }
 .v-reg{
