--- a/stylev.css
+++ b/stylev.css
@@ -14,8 +14,9 @@ body {
     padding-left: 5%;
     padding-right: 5%;
     border-radius: 20px;
-    padding-bottom: 5%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding-bottom: 3%;
+    padding-top: 4%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     width: 300px;
     opacity: 100%;
     margin-top: auto;
