--- a/stylev.css
+++ b/stylev.css
@@ -15,7 +15,7 @@ body {
     padding-right: 5%;
     border-radius: 20px;
     padding-bottom: 3%;
-    padding-top: 4%;
+    padding-top: 2%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     width: 300px;
     opacity: 100%;
@@ -24,8 +24,8 @@ body {
 }
 #v-form2 {
     background-color: rgba(255,255,255,0.7);
-    padding-top: 15px;
-    padding-bottom: 35px;
+    padding-top: 2%;
+    padding-bottom: 3%;
     padding-left: 5%;
     padding-right: 5%;
     border-radius: 20px;
